Name cut off issue fixed in user info page.

--- a/src/styles.css
+++ b/src/styles.css
@@ -271,7 +271,7 @@ nav a.active {
 
 .ellipsis {
 	width: 100%;
-	overflow: hidden;
+/* 	overflow: hidden; */
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	float: left !important;
